fixed issues on mobile devices with scaling

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,4 @@
-
+/* Variables */
 :root {
   --gradient-background: linear-gradient(
     180deg,
@@ -7,10 +7,13 @@
   );
 }
 
+/* Global Styles */
 * {
   font-family: "Roboto", sans-serif;
   font-weight: bolder;
 }
+
+/* Body */
 body {
   margin: 0;
   display: flex;
@@ -19,6 +22,7 @@ body {
   background: #3d3d3d;
 }
 
+/* Header */
 header {
   margin-bottom: auto;
   text-align: center;
@@ -31,8 +35,9 @@ footer h3,
 .card-subtext {
   color: hotpink;
 }
+
 header h1 {
-  font-size: 2.5rem
+  font-size: 2.5rem;
 }
 
 header p {
@@ -41,27 +46,46 @@ header p {
   font-size: 1rem;
 }
 
+/* Footer */
 footer {
   margin-top: auto;
   text-align: center;
 }
 
+/* Code Snippets Section */
 .code-snippets {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  max-width: 2000px;
 }
 
+/* Card Styles */
 .card {
   height: 400px;
   width: 400px;
   padding: 20px;
-  margin: 20px;
+  margin: 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border: 3px dashed white;
+}
+
+.card-header {
+  position: relative;
+  margin-top: -2.9rem;
+  background-color: #3d3d3d;
+  border-radius: 5px;
+  border: 3px solid white;
+  padding: 0.5rem;
+}
+
+.card-subtext {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 article {
@@ -73,23 +97,25 @@ article {
   line-height: 1.5rem;
 }
 
-.card-subtext {
-  display: flex;
-  flex-direction: column;;
-  justify-content: center;
-}
-
 .card:hover,
 .card:hover .card-header {
   box-shadow: inset 0px 0px 8px rgba(232, 102, 236, 1),
     0 0 15px rgba(232, 102, 236, 1);
 }
 
-.card-header {
-  position: relative;
-  margin-top: -2.9rem;
-  background-color: #3d3d3d;
-  border-radius: 5px;
-  border: 3px solid white;
-  padding: 0.5rem;
+/* Media Queries */
+@media (max-width: 768px) {
+  .card {
+    width: 45%;
+    height: 45%;
+    margin: 2.5%;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    width: 100%;
+    height: 40%;
+    margin: 5%;
+  }
 }
